k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-app-ingress
  namespace: chat-app
  labels:
    app: chat-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$1
    nginx.ingress.kubernetes.io/rewrite-target: /socket.io/$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
  - host: chat.dileep.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: frontend
              port:
                number: 80
        - pathType: ImplementationSpecific
          path: /api/(.*)
          backend:
            service:
              name: backend
              port:
                number: 5001
        - pathType: ImplementationSpecific
          path: /socket.io/(.*)
          backend:
            service:
              name: backend
              port:
                number: 5001
